--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
             var jssor_slider1 = new $JssorSlider$("slider1_container", options);
         });
     </script>
-    
+
 	<div class="a">
 	<div class="b"><ul>
     					<li><a href="index.html">Home</a></li>
@@ -75,6 +75,6 @@
     <p>&nbsp;</p>
 </div>
 </div>
-      <div class="h">Copyrights &copy;NASS Consultancy.</div> 
+      <div class="h">Copyrights &copy;NASS Consultancy 2015.</div> 
 </body>
 </html>
